# BlacklistX

./: .env  .env_example  .gitignore  README.md  app-old.py  app.py  app.sh  pyproject.toml  test.ipynb  teste.ipynb
dags/: start.py
database/: __init__.py  database.py
notebook/: recognition.py  test.ipynb
repositories/: interface.py  restrictedPhoto.py
scripts/: recognition.py  web.py
static/: index.html
static/pages/: dash.html
