[project]
name = "facialrecognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "opencv-python>=4.10.0.84",
    "numpy>=2.1.2",
    "dlib>=19.24.6",
    "pillow>=11.0.0",
    "click>=8.1.7",
]
